<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary">


    <TextView
        android:id="@+id/textView"
        android:layout_width="115dip"
        android:layout_height="107dip"
        android:layout_marginTop="81dp"
        android:background="@drawable/ic_logo"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="37dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="36sp"
        app:fontFamily="@font/biryani_bold" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/sign_up"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/grassgreen"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@drawable/custom_button"/>
</LinearLayout>