<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="128dp"
        android:layout_marginTop="120dp"
        android:layout_gravity="center">
        <ImageView
            android:id="@+id/textView"
            android:layout_width="110dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_logo"
            android:layout_centerHorizontal="true"
            android:scaleType="fitXY"/>

        <TextView
            android:id="@+id/appName"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/darkGray"
            android:textSize="30sp"
            android:textStyle="bold"/>
    </RelativeLayout>


    <Button
        android:id="@+id/signUpButtonMain"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/sign_up"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/grassgreen"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/loginButtonMain"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/login"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="false"/>
</LinearLayout>