<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LogIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/usernameWrapper"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            >
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:inputType="text"
                android:hint="@string/user_name"
                android:padding="10dp"
                android:background="@drawable/custom_input_field"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordWrapper"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@id/usernameWrapper">
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:inputType="textPassword"
                android:padding="10dp"
                android:hint="password"
                android:background="@drawable/custom_input_field"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="Login"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_button"/>
        <TextView
            android:id="@+id/signup_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_link"
            android:textColor="@color/colorAccent"
            android:layout_marginBottom="10dp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="@string/Terms"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

</LinearLayout>