<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LogIn"
    android:background="@color/colorPrimary">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ProgressBar
            android:id="@+id/signup_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:elevation="10dp"
            />
        <LinearLayout
            android:id="@+id/inputFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:hint="@string/user_name"
                android:padding="10dp"
                android:background="@drawable/custom_input_field"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/nameError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="18dp"
                android:background="@color/colorPrimary"
                android:text="Value is incorrect"
                android:textColor="@android:color/holo_red_light"
                android:textSize="16sp"
                android:visibility="gone"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword"
                android:padding="10dp"
                android:hint="password"
                android:textSize="16sp"
                android:background="@drawable/custom_input_field"/>
            <TextView
                android:id="@+id/passwordError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="18dp"
                android:background="@color/colorPrimary"
                android:text="Value is incorrect"
                android:textColor="@android:color/holo_red_light"
                android:textSize="16sp"
                android:visibility="gone"/>
            <Button
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="Sign up"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:background="@drawable/custom_button"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/login_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_link"
                android:textColor="@color/colorAccent"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textSize="13sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/Terms"
                android:textSize="13sp"
                android:textColor="@color/colorAccent"/>

        </LinearLayout>
    </RelativeLayout>


</ScrollView>